--- a/recipes/r-saige/meta.yaml
+++ b/recipes/r-saige/meta.yaml
@@ -2,10 +2,11 @@
 
 package:
   name: r-saige
-  version: 1.0.7
+  version: 1.0.9
 
 source:
   git_url: https://github.com/saigegit/SAIGE
+  git_rev: v1.0.9
   git_depth: 1
   patches:
     - patches/0001-use-shared-libs-in-makevars.patch
