Build RAREMETAL with OpenMP enabled

--- a/recipes/raremetal/meta.yaml
+++ b/recipes/raremetal/meta.yaml
@@ -11,6 +11,7 @@ requirements:
     - {{ compiler("c") }}
     - {{ compiler("cxx") }}
     - {{ compiler("fortran") }}
+    - openmp
   host:
     - cget
     - cmake
