--- a/recipes/qctool/meta.yaml
+++ b/recipes/qctool/meta.yaml
@@ -18,7 +18,7 @@ requirements:
 
 test:
   commands:
-    - test $(qctool | wc -w) -gt 0
+    - test $(qctool -help | wc -w) -gt 0
 
 about:
   home: https://www.well.ox.ac.uk/~gav/qctool_v2/index.html
