--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,6 +19,20 @@ repos:
     hooks:
       - id: black
         language_version: python3.10
+  - repo: https://github.com/charliermarsh/ruff-pre-commit
+    rev: v0.0.252
+    hooks:
+    - id: ruff
+  - repo: https://github.com/codespell-project/codespell
+    rev: v2.2.2
+    hooks:
+    - id: codespell
+      types_or: [python, rst, markdown]
+  - repo: https://github.com/MarcoGorelli/cython-lint
+    rev: v0.12.4
+    hooks:
+    - id: cython-lint
+    - id: double-quote-cython-strings
   - repo: https://github.com/pycqa/isort
     rev: 5.12.0
     hooks:
