--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   docker_build:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     outputs:
       tag: ${{ steps.build_tag.outputs.tag }}
@@ -23,16 +23,16 @@ jobs:
           fetch-depth: 0
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v2
 
       - name: Login to DockerHub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           username: hippocampusgirl
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
@@ -42,26 +42,26 @@ jobs:
         id: build_tag
         shell: bash
         env:
-          GITHUB_REF: ${{ github.ref }}
-          GITHUB_REPOSITORY: ${{ github.repository }}
+          github_ref: ${{ github.ref }}
+          github_repository: ${{ github.repository }}
         run: |
-          VERSION=$(echo "${GITHUB_REF}" | cut -d '/' -f 3)
-          if [[ "$VERSION" == "main" ]]; then
-            VERSION=latest
+          version=$(echo "${github_ref}" | cut -d '/' -f 3)
+          if [[ "$version" == "main" ]]; then
+            version=latest
           fi
-          OWNER=$( \
-            echo "${GITHUB_REPOSITORY}" | \
+          owner=$( \
+            echo "${github_repository}" | \
             cut -d'/' -f1 | \
             tr '[:upper:]' '[:lower:]' \
           )
-          REPO=$( \
-            echo "${GITHUB_REPOSITORY}" | \
+          name=$( \
+            echo "${github_repository}" | \
             cut -d'/' -f2 | \
             sed -r 's/([A-Za-z0-9])([A-Z])([a-z0-9])/\1-\L\2\3/g' | \
             tr '[:upper:]' '[:lower:]' \
           )
-          echo "::set-output name=repo::${OWNER}/${REPO}"
-          echo "::set-output name=tag::${OWNER}/${REPO}:${VERSION}"
+          echo "repo=${owner}/${name}" >> ${GITHUB_OUTPUT}
+          echo "tag=${owner}/${name}:${version}" >> ${GITHUB_OUTPUT}
 
       - name: Docker build and push
         uses: docker/build-push-action@v3
@@ -82,7 +82,7 @@ jobs:
             org.opencontainers.image.revision=${{ github.sha }}
 
   singularity_build:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     needs:
       - docker_build
@@ -118,7 +118,7 @@ jobs:
           docker-entrypoint.sh /docker2singularity.sh \
             --name ${SINGULARITY_IMAGE_NAME} \
             ${DOCKER_IMAGE_NAME}
-                    echo "::set-output name=image::${SINGULARITY_IMAGE_FILE}"
+          echo "image=${SINGULARITY_IMAGE_FILE}" >> ${GITHUB_OUTPUT}
 
       - name: Upload to DigitalOcean
         shell: bash
