--- a/recipes/dosage-convertor/meta.yaml
+++ b/recipes/dosage-convertor/meta.yaml
@@ -5,8 +5,8 @@ package:
 source:
   git_url: https://github.com/Santy-8128/DosageConvertor
   patches:
-    - patches/0001-version.patch
-    - patches/0002-libstatgen.patch
+    - 0001-update-version.patch
+    - 0002-fix-cmake-libstatgen.patch
 
 requirements:
   build:
