--- a/recipes/raremetal/meta.yaml
+++ b/recipes/raremetal/meta.yaml
@@ -5,6 +5,8 @@ package:
 source:
   git_url: https://github.com/statgen/raremetal
   git_depth: 1
+  patches:
+    - 0001-fix-build-gcc-13.patch
 
 requirements:
   build:
