--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,16 +20,16 @@ repos:
       - id: black
         language_version: python3.10
   - repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: v0.0.252
+    rev: v0.0.272
     hooks:
     - id: ruff
   - repo: https://github.com/codespell-project/codespell
-    rev: v2.2.2
+    rev: v2.2.4
     hooks:
     - id: codespell
       types_or: [python, rst, markdown]
   - repo: https://github.com/MarcoGorelli/cython-lint
-    rev: v0.12.4
+    rev: v0.15.0
     hooks:
     - id: cython-lint
     - id: double-quote-cython-strings
@@ -43,7 +43,7 @@ repos:
     hooks:
       - id: flake8
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.1.1
+    rev: v1.3.0
     hooks:
     - id: mypy
-      additional_dependencies: [numpy]
+      additional_dependencies: [numpy, types-PyYAML]
