--- a/recipes/gcta/meta.yaml
+++ b/recipes/gcta/meta.yaml
@@ -7,7 +7,8 @@ source:
     git_rev: v1.94.1
     folder: gcta
     patches:
-      - patches/0001-simu-seed.patch
+      - 0001-simu-seed.patch
+      - 0002-fix-build-gcc-13.patch
   - git_url: https://github.com/yixuan/spectra
     git_rev: v1.0.1
     folder: spectra
