--- a/recipes/qctool/meta.yaml
+++ b/recipes/qctool/meta.yaml
@@ -5,6 +5,8 @@ package:
 source:
   git_url: https://github.com/gavinband/qctool
   git_rev: v2.2.0
+  patches:
+    - 0001-fix-build-gcc-13.patch
 
 requirements:
   build:
