--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -67,9 +67,8 @@ jobs:
           push: true
           platforms: linux/amd64
           cache-from: type=registry,ref=${{ secrets.REGISTRY }}/${{ steps.build_tag.outputs.repo }}:buildcache
-          cache-to: type=registry,ref=${{ secrets.REGISTRY }}/${{ steps.build_tag.outputs.repo }}:buildcache,mode=max
-          tags: |
-            ${{ secrets.REGISTRY }}/${{ steps.build_tag.outputs.tag }}
+          cache-to: type=registry,ref=${{ secrets.REGISTRY }}/${{ steps.build_tag.outputs.repo }}:buildcache,compression=zstd,mode=max
+          outputs: type=image,name=${{ secrets.REGISTRY }}/${{ steps.build_tag.outputs.tag }},push=true,compression=zstd
           labels: |
             org.opencontainers.image.title=${{ github.event.repository.name }}
             org.opencontainers.image.url=${{ github.event.repository.html_url }}
