--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,9 +15,6 @@ jobs:
     outputs:
       tag: ${{ steps.build_tag.outputs.tag }}
     steps:
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
       - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
@@ -40,7 +37,7 @@ jobs:
         run: |
           version=$(echo "${github_ref}" | cut -d '/' -f 3)
           if [[ "$version" == "main" ]]; then
-            version=latest
+            version="latest"
           fi
           owner=$( \
             echo "${github_repository}" | \
@@ -57,10 +54,15 @@ jobs:
           echo "tag=${name}:${version}" >> ${GITHUB_OUTPUT}
 
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+        with:
+          config: ".github/buildkitd.toml"
 
       - name: Build and push to container registry
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v5
         with:
           context: "."
           file: "./Dockerfile"
