--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,7 +59,9 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
         with:
-          config: ".github/buildkitd.toml"
+          config-inline: |
+            [worker.oci]
+            max-parallelism = 2
 
       - name: Build and push to container registry
         uses: docker/build-push-action@v5
