--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,9 +59,7 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
         with:
-          config-inline: |
-            [worker.oci]
-              max-parallelism = 2
+          config: .github/buildkitd.toml
 
       - name: Build and push to container registry
         uses: docker/build-push-action@v5
