Refactor from Pytorch to JAX
- Pytorch's `torch.lstsq` is broken since version 2.0 (see
  https://github.com/pytorch/pytorch/issues/114353), so we cannot
  realistically continue using it for fitting least squares models
- A simple solution is to use JAX instead of Pytorch
- This also allows upgrading to Python 3.12
- Refactor the plot command to allow parallelization of plotting
- Add more type hints

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,5 +1,10 @@
 [mypy]
+exclude = (build|dist|setup.py|.venv)
+untyped_calls_exclude = jax
+
 check_untyped_defs = True
+
 ignore_missing_imports = True
-python_version = 3.11
+
+python_version = 3.12
 plugins = numpy.typing.mypy_plugin
