--- a/.gitignore
+++ b/.gitignore
@@ -158,6 +158,7 @@ cython_debug/
 # Cython generated files
 src/gwas/src/gwas/mem/_os.c
 src/gwas/src/gwas/_matrix_functions.c
+src/gwas/src/gwas/plot/_get.c
 
 # Direnv
 .direnv
