--- a/recipes/dosage-convertor/meta.yaml
+++ b/recipes/dosage-convertor/meta.yaml
@@ -10,8 +10,8 @@ source:
 
 requirements:
   build:
-    - {{ compiler("c") }}
-    - {{ compiler("cxx") }}
+    - "{{ compiler('c') }}"
+    - "{{ compiler('cxx') }}"
   host:
     - cget
     - cmake
