--- a/recipes/raremetal-debug/meta.yaml
+++ b/recipes/raremetal-debug/meta.yaml
@@ -12,9 +12,9 @@ source:
 
 requirements:
   build:
-    - {{ compiler("c") }}
-    - {{ compiler("cxx") }}
-    - {{ compiler("fortran") }}
+    - "{{ compiler('c') }}"
+    - "{{ compiler('cxx') }}"
+    - "{{ compiler('fortran') }}"
     - openmp
   host:
     - cget
