--- a/recipes/upload/meta.yaml
+++ b/recipes/upload/meta.yaml
@@ -1,12 +1,10 @@
-{% set name = "upload" %}
-{% set version = "0.4.1" %}
 
 package:
-  name: {{ name }}
-  version: {{ version }}
+  name: upload
+  version: 0.4.1
 
 source:
-  url: https://github.com/hippocampusgirl/{{ name }}/archive/v{{ version }}.tar.gz
+  url: "https://github.com/hippocampusgirl/upload/archive/v0.4.1.tar.gz"
   sha256: 395f336fa2dc913e84899f1f1fee8a2f57b650f4b6536c079ddba8ca48af7e62
 
 build:
@@ -14,8 +12,8 @@ build:
 
 requirements:
   build:
-    - {{ compiler('c') }}
-    - {{ compiler('cxx') }}
+    - "{{ compiler('c') }}"
+    - "{{ compiler('cxx') }}"
     - nodejs
     - make
   host:
