Add example for cython
Co-authored-by: dominikgoeller <dominikgoeller@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -159,6 +159,7 @@ cython_debug/
 src/gwas/src/gwas/mem/_os.c
 src/gwas/src/gwas/_matrix_functions.c
 src/gwas/src/gwas/compression/arr/_get.c
+src/gwas/src/gwas/vcf/_htslib.c
 
 # Direnv
 .direnv
