--- a/recipes/r-gmmat/meta.yaml
+++ b/recipes/r-gmmat/meta.yaml
@@ -13,8 +13,8 @@ build:
 
 requirements:
   build:
-    - {{ compiler("c") }}
-    - {{ compiler("cxx") }}
+    - "{{ compiler('c') }}"
+    - "{{ compiler('cxx') }}"
   host:
     - libblas
     - liblapack
