--- a/recipes/upload/meta.yaml
+++ b/recipes/upload/meta.yaml
@@ -17,9 +17,9 @@ requirements:
     - nodejs
     - make
   host:
-    - nodejs
+    - "nodejs<=21"
   run:
-    - nodejs
+    - "nodejs<=21"
 
 test:
   requires:
