Add parquet and blosc2 compression
- Parallelize calc_mean
- Add unit tests
- Fix synchronization of SharedWorkspace

--- a/recipes/upload/meta.yaml
+++ b/recipes/upload/meta.yaml
@@ -14,7 +14,7 @@ requirements:
   build:
     - "{{ compiler('c') }}"
     - "{{ compiler('cxx') }}"
-    - nodejs
+    - "nodejs<=21"
     - make
   host:
     - "nodejs<=21"
