--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,7 @@
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
 default_language_version:
-  python: "3.11"
+  python: "3.12"
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.6.0
@@ -20,13 +20,13 @@ repos:
         exclude_types:
           - diff
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.4.2
+    rev: v0.5.6
     hooks:
       - id: ruff
         args: [--fix, --exit-non-zero-on-fix]
       - id: ruff-format
   - repo: https://github.com/codespell-project/codespell
-    rev: v2.2.6
+    rev: v2.3.0
     hooks:
       - id: codespell
         types_or: [python, rst, markdown]
@@ -36,7 +36,14 @@ repos:
       - id: cython-lint
       - id: double-quote-cython-strings
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.10.0
+    rev: v1.11.1
     hooks:
       - id: mypy
-        additional_dependencies: [numpy, types-PyYAML]
+        additional_dependencies:
+          - numpy
+          - pandas-stubs
+          - types-psutil
+          - types-PyYAML
+          - types-seaborn
+          - types-setuptools
+          - types-tqdm
