--- a/mypy.ini
+++ b/mypy.ini
@@ -4,7 +4,18 @@ untyped_calls_exclude = jax
 
 check_untyped_defs = True
 
-ignore_missing_imports = True
+ignore_missing_imports = False
 
 python_version = 3.12
 plugins = numpy.typing.mypy_plugin
+
+[mypy-blosc2]
+ignore_missing_imports = True
+[mypy-pyarrow,pyarrow.pandas_compat]
+ignore_missing_imports = True
+[mypy-pytest_benchmark.fixture,pytest_cov.embed]
+ignore_missing_imports = True
+[mypy-scipy]
+ignore_missing_imports = True
+[mypy-threadpoolctl]
+ignore_missing_imports = True
