Increase performance for partial compressed file reads

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -44,6 +44,7 @@ repos:
           - pandas-stubs
           - types-psutil
           - types-PyYAML
+          - types-requests
           - types-seaborn
           - types-setuptools
           - types-tqdm
