--- a/mypy.ini
+++ b/mypy.ini
@@ -7,12 +7,12 @@ check_untyped_defs = True
 
 ignore_missing_imports = False
 
-python_version = 3.12
+python_version = 3.13
 plugins = numpy.typing.mypy_plugin
 
-[mypy-blosc2]
+[mypy-adjustText]
 ignore_missing_imports = True
-[mypy-pyarrow,pyarrow.pandas_compat]
+[mypy-blosc2]
 ignore_missing_imports = True
 [mypy-pytest_benchmark.fixture,pytest_cov.embed]
 ignore_missing_imports = True
