--- a/recipes/ldsc/meta.yaml
+++ b/recipes/ldsc/meta.yaml
@@ -1,38 +1,40 @@
-{% set name = "ldsc" %}
-{% set version = "2.0.1" %}
-
 package:
-  name: {{ name|lower }}
-  version: {{ version }}
+  name: ldsc
+  version: 2.0.2
 
 source:
-  url: https://pypi.org/packages/source/{{ name[0] }}/{{ name }}/ldsc-{{ version }}.tar.gz
-  sha256: fe72f99da8a26414d82e47f2d2ee7cebbbab6c20d1b4ea51a0c38cc650c63556
+  url: "https://github.com/belowlab/ldsc/archive/refs/tags/2.0.2.tar.gz"
+  sha256: "f28c2fc77c05aa59f293e2666ba38a69610b8e153ff3b7f382dec53601bebc71"
 
 build:
-  script: {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
+  noarch: python
+  script: |
+    nosetests --exclude="test_nextSNPs|test_nextSNPs_maf_ref|test_get_compression_gzip"
+    {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
   number: 0
 
 requirements:
   host:
     - python
     - pip
+    - pynose
+    - bitarray >=2.6.0
+    - pybedtools >0.9.1
+    - scipy >=1.9.2
+    - numpy >=1.23.3
+    - pandas >=1.5.0
   run:
     - python
     - bitarray >=2.6.0
-    - nose >=1.3.7
-    - pybedtools >=0.9.0
+    - pybedtools >0.9.1
     - scipy >=1.9.2
     - numpy >=1.23.3
     - pandas >=1.5.0
 
 test:
-  requires:
-    - nose
   imports:
     - ldscore.ldscore
   commands:
-    - nosetests ldscore
     - make_annot.py --help 2>&1 | grep usage
     - munge_sumstats.py --help 2>&1 | grep usage
     - ldsc.py --help 2>&1 | grep usage
