--- a/recipes/upload/meta.yaml
+++ b/recipes/upload/meta.yaml
@@ -1,11 +1,11 @@
 
 package:
   name: upload
-  version: 0.5.10
+  version: 0.5.12
 
 source:
-  url: "https://github.com/hippocampusgirl/upload/archive/v0.5.10.tar.gz"
-  sha256: "29a097cb8bdccf9ef672e8ba160a12650aabf40f9f9c3f56b32ab5b8b81599cd"
+  git_url: https://github.com/hippocampusgirl/upload
+  git_rev: v0.5.12
 
 build:
   noarch: generic
