--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,14 +11,13 @@ repos:
       - id: check-ast
       - id: check-symlinks
       - id: mixed-line-ending
+        exclude_types: [diff]
       - id: check-case-conflict
       - id: fix-byte-order-marker
       - id: trailing-whitespace
-        exclude_types:
-          - diff
+        exclude_types: [diff]
       - id: end-of-file-fixer
-        exclude_types:
-          - diff
+        exclude_types: [diff]
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.6.8
     hooks:
