--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -67,7 +67,7 @@ jobs:
           cache_from = f"type=registry,ref={path}:buildcache"
           output = dict(
               cache_from=cache_from,
-              cache_to=f"{cache_from},compression=zstd,mode=max" if push else "",
+              cache_to=f"{cache_from},compression=zstd,mode=max,image-manifest=true" if push else "",
               labels=[
                   f'org.opencontainers.image.created="{pushed_at}"',
                   'org.opencontainers.image.authors="Lea Waller <lea@lea.science>"',
