--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -143,6 +143,33 @@ jobs:
           tags: |
             ${{ steps.metadata.outputs.push_tags }}
 
+      - name: Set up Apptainer
+        run: |
+          sudo add-apt-repository --yes "ppa:apptainer/ppa"
+          sudo apt install --yes "apptainer" "apptainer-suid"
+
+      - name: Build Apptainer container
+        if: ${{ steps.metadata.outputs.push == 'true' }}
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_ENDPOINT_URL: ${{ secrets.AWS_ENDPOINT_URL }}
+        run: |
+          mkdir "singularity"
+          apptainer build \
+            --disable-cache \
+            "./singularity/${{ steps.metadata.outputs.singularity_name }}" \
+            "docker-daemon://${{ steps.metadata.outputs.build_tag }}"
+          image_file=$(find "./singularity" -type f | head --lines=1)
+          # Check if the container works
+          apptainer exec "${image_file}" score --help
+          # Upload the container
+          aws s3 mv \
+            --only-show-errors \
+            --acl public-read \
+            "${image_file}" \
+            "s3://download-gwas-science/singularity/"
+
       - name: Build Singularity 2.x container
         if: ${{ steps.metadata.outputs.push == 'true' }}
         env:
@@ -150,42 +177,21 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_ENDPOINT_URL: ${{ secrets.AWS_ENDPOINT_URL }}
         run: |
-          mkdir --parents singularity-2
+          mkdir "singularity-2"
           docker run \
             --privileged \
             --rm \
             --volume="/var/run/docker.sock:/var/run/docker.sock" \
-            --volume="$(pwd)/singularity-2:/output" \
-            quay.io/singularity/docker2singularity:v2.6 \
-            --name ${{ steps.metadata.outputs.singularity_name }} \
-            ${{ steps.metadata.outputs.build_tag }}
-          image_file=$(find singularity-2 -type f | head --lines=1)
+            --volume="./singularity-2:/output" \
+            "quay.io/singularity/docker2singularity:v2.6"
+            --name "${{ steps.metadata.outputs.singularity_name }}" \
+            "${{ steps.metadata.outputs.build_tag }}"
+          image_file=$(find "./singularity-2" -type f | head --lines=1)
+          # Check if the container works
+          apptainer exec "${image_file}" score --help
+          # Upload the container
           aws s3 mv \
             --only-show-errors \
             --acl public-read \
-            ${image_file} \
-            s3://download-gwas-science/singularity/
-
-      - name: Build Singularity container
-        if: ${{ steps.metadata.outputs.push == 'true' }}
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_ENDPOINT_URL: ${{ secrets.AWS_ENDPOINT_URL }}
-        run: |
-          mkdir --parents singularity
-          docker run \
-            --rm \
-            --volume="/var/run/docker.sock:/var/run/docker.sock" \
-            --volume="$(pwd)/singularity:/output" \
-            quay.io/singularity/singularity:v4.1.0 \
-            build \
-            --disable-cache \
-            /output/${{ steps.metadata.outputs.singularity_name }} \
-            docker-daemon://${{ steps.metadata.outputs.build_tag }}
-          image_file=$(find singularity -type f | head --lines=1)
-          aws s3 mv \
-            --only-show-errors \
-            --acl public-read \
-            ${image_file} \
-            s3://download-gwas-science/singularity/
+            "${image_file}" \
+            "s3://download-gwas-science/singularity/"
