--- a/mypy.ini
+++ b/mypy.ini
@@ -14,7 +14,11 @@ plugins = numpy.typing.mypy_plugin
 ignore_missing_imports = True
 [mypy-blosc2]
 ignore_missing_imports = True
+[mypy-optax.*]
+ignore_missing_imports = True
 [mypy-pytest_benchmark.fixture,pytest_cov.embed]
+ignore_missing_imports = True
+[mypy-rpy2.*]
 ignore_missing_imports = True
 [mypy-scipy]
 ignore_missing_imports = True
