--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -29,6 +29,7 @@ repos:
     hooks:
       - id: codespell
         types_or: [python, rst, markdown]
+        args: ["--ignore-words=.codespell-ignore"]
   - repo: https://github.com/MarcoGorelli/cython-lint
     rev: v0.16.2
     hooks:
