Update scipy imports

--- a/mypy.ini
+++ b/mypy.ini
@@ -20,7 +20,7 @@ ignore_missing_imports = True
 ignore_missing_imports = True
 [mypy-rpy2.*]
 ignore_missing_imports = True
-[mypy-scipy]
+[mypy-scipy.*]
 ignore_missing_imports = True
 [mypy-threadpoolctl]
 ignore_missing_imports = True
