--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -39,6 +39,7 @@ repos:
     rev: v1.15.0
     hooks:
       - id: mypy
+        args: [--config, ./mypy.ini]
         additional_dependencies:
           - numpy
           - pandas-stubs
