Add jax, chex, pyarrow and jaxtyping to mypy ignore missing imports

--- a/mypy.ini
+++ b/mypy.ini
@@ -13,7 +13,15 @@ python_version = 3.13
 ignore_missing_imports = True
 [mypy-blosc2]
 ignore_missing_imports = True
+[mypy-chex]
+ignore_missing_imports = True
+[mypy-jax.*]
+ignore_missing_imports = True
+[mypy-jaxtyping]
+ignore_missing_imports = True
 [mypy-optax.*]
+ignore_missing_imports = True
+[mypy-pyarrow.*]
 ignore_missing_imports = True
 [mypy-pytest_benchmark.fixture,pytest_cov.embed]
 ignore_missing_imports = True
