--- a/mypy.ini
+++ b/mypy.ini
@@ -11,6 +11,8 @@ python_version = 3.13
 
 [mypy-adjustText]
 ignore_missing_imports = True
+[mypy-Cython.Build]
+ignore_missing_imports = True
 [mypy-blosc2]
 ignore_missing_imports = True
 [mypy-chex]
